--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>tradfri-app</title>
+    <link rel="stylesheet" href="semantic.css">
+    <title>Trådfri App</title>
   </head>
   <body>
     <div id="app"></div>
