--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="semantic.css">
+    <link rel="shortcut icon" type="image/png" href="/static/logo.png"/>
     <title>Trådfri App</title>
   </head>
   <body>
